# rust-fluid-simulator

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md
.claude/skills/sph/: SKILL.md
.claude/skills/sph/references/: applications.md  boundary_methods.md  math_reference.md  multiphase.md  performance.md  software_guide.md  sph_variants.md  validation.md
.claude/skills/sph/scripts/: kernels.py  neighbor_search.py  sph_2d_dambreak.py
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/web/: Cargo.toml  build.sh  index.html
apps/web/src/: lib.rs  main.rs
assets/scenes/: dam_break.json  double_emitter.json
crates/common/: Cargo.toml
crates/common/src/: config.rs  dimension.rs  events.rs  export.rs  lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: camera.rs  color_map.rs  field_renderer.rs  grid_overlay.rs  lib.rs  particle_renderer.rs
crates/renderer/src/shaders/: field.wgsl  particle.wgsl
crates/sim-core/: Cargo.toml
crates/sim-core/src/: boundary.rs  lib.rs  obstacle.rs  scene.rs  simulation.rs  solver.rs
crates/sim-gpu/: Cargo.toml
crates/sim-gpu/src/: buffers.rs  context.rs  gpu_simulation.rs  grid_buffers.rs  lib.rs  shader_loader.rs  uniforms.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  backend.rs  interaction.rs  lib.rs  theme.rs
crates/ui/src/panels/: mod.rs  properties.rs  scene.rs  status.rs  timeline.rs  toolbar.rs  viewport.rs
docs/plans/: 2026-02-08-performance-optimization-design.md  2026-02-08-sph-integration-design.md
tools/benchmark/: Cargo.toml
tools/benchmark/src/: main.rs
(+30 files in other folders)
