[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/sim-core",
    "crates/sim-gpu",
    "crates/renderer",
    "crates/ui",
    "apps/desktop",
    "apps/web",
    "tools/benchmark",
]

[workspace.dependencies]
nalgebra = "0.33"
glam = "0.29"
wgpu = "24"
egui = "0.31"
eframe = "0.31"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
wasm-bindgen = "0.2"
