[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
sim-core = { path = "../sim-core" }
renderer = { path = "../renderer" }
bytemuck = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
eframe = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
